--- a/src/explore.ipynb
+++ b/src/explore.ipynb
@@ -881,7 +881,7 @@
             "source": [
                 "### Análisis sobre variables numericas\n",
                 "\n",
-                "A continuacion se muestran histogramas para las variables: host_name, neighbourhood_group, neighbourhood y room_type.\n",
+                "A continuacion se muestran histogramas para las variables: Percent of adults with a bachelor's degree or higher 2014-18, R_death_2018,PCTPOVALL_2018, Med_HH_Income_Percent_of_State_Total_2018,Unemployment_rate_2018,Active Primary Care Physicians per 100000 Population 2018 (AAMC) y anycondition_prevalence.      \n",
                 "\n",
                 "el analisis de los histogramas por cada variable arroja la siguiente informacion:\n",
                 "\n",
@@ -3209,7 +3209,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.12.4"
+            "version": "3.12.3"
         },
         "orig_nbformat": 4,
         "vscode": {
